scroll bar shifting post bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+  }  
+
 .Post {
     width: 100%;
     height: 100%; 
